@@ -1,14 +1,10 @@
 package com.tungstun.security.data.model;
 
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import javax.persistence.*;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @Entity
 @Table(name = "\"user\"")
@@ -17,14 +13,20 @@ public class User implements UserDetails {
     @GeneratedValue(strategy = GenerationType.AUTO)
     private Long id;
 
-    @Column(name = "username")
+    @Column(name = "username", unique = true)
     private String username;
 
     @Column(name = "password")
     private String password;
 
-    @Enumerated(EnumType.STRING)
-    private UserRole role;
+    @Column(name = "mail", unique = true)
+    private String mail;
+
+    @Column(name = "first_name")
+    private String firstName;
+
+    @Column(name = "last_name")
+    private String lastName;
 
     @OneToMany(
             cascade = CascadeType.ALL,
@@ -33,10 +35,13 @@ public class User implements UserDetails {
     private List<UserBarAuthorization> userBarAuthorizations;
 
     public User() { }
-    public User(String username, String password, UserRole role) {
+    public User(String username, String password, String mail, String firstName, String lastName, List<UserBarAuthorization> userBarAuthorizations) {
         this.username = username;
         this.password = password;
-        this.role = role;
+        this.mail = mail;
+        this.firstName = firstName;
+        this.lastName = lastName;
+        this.userBarAuthorizations = userBarAuthorizations;
     }
 
     public Long getId() { return id; }
@@ -49,21 +54,33 @@ public class User implements UserDetails {
 
     public void setPassword(String password) { this.password = password; }
 
-    public UserRole getRole() { return role; }
+    public String getMail() { return mail; }
 
-    public void setRole(UserRole role) { this.role = role; }
+    public void setMail(String mail) { this.mail = mail; }
 
+    public String getFirstName() { return firstName; }
+
+    public void setFirstName(String firstName) { this.firstName = firstName; }
+
+    public String getLastName() { return lastName; }
+
+    public void setLastName(String lastName) { this.lastName = lastName; }
 
     public List<UserBarAuthorization> getUserBarAuthorizations() { return userBarAuthorizations; }
 
-    public void setUserBarAuthorizations(List<UserBarAuthorization> userBarAuthorization) {
-        this.userBarAuthorizations = userBarAuthorization;
+    public boolean addUserBarAuthorizations(UserBarAuthorization userBarAuthorization) {
+        if (!this.userBarAuthorizations.contains(userBarAuthorization)) return this.userBarAuthorizations.add(userBarAuthorization);
+        return false;
+    }
+
+    public boolean removeUserBarAuthorizations(UserBarAuthorization userBarAuthorization) {
+        return this.userBarAuthorizations.remove(userBarAuthorization);
     }
 
     public Map<Long, String> getAuthoritiesMap() {
         Map<Long, String> barAuth = new HashMap<>();
         for (UserBarAuthorization userBarAuthorization : userBarAuthorizations) {
-            barAuth.put(userBarAuthorization.getBarId(), userBarAuthorization.getRole().toString());
+            barAuth.put(userBarAuthorization.getBar().getId(), userBarAuthorization.getRole().toString());
         }
         return barAuth;
     }
@@ -82,6 +99,24 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role.toString()));
+        return Collections.emptyList();
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        User user = (User) o;
+        return Objects.equals(id, user.id) &&
+                Objects.equals(username, user.username) &&
+                Objects.equals(password, user.password) &&
+                Objects.equals(mail, user.mail) &&
+                Objects.equals(firstName, user.firstName) &&
+                Objects.equals(lastName, user.lastName);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(id, username, password, mail, firstName, lastName);
     }
 }
